(Backend) New - counselling app, models, views
New counselling app

New models
- About
- Counsellor
- Slot

New Views
- CounsellorsView -> not completed, minimal version
- CounsellorView
- SlotsView
- AvailableSlotsView
