# backend/counselling/models/__init__.py
@@ -1,0 +1,5 @@
+
+from .Counsellor import Counsellor 
+from .About import About
+from .Slot import Slot
+
